Modernize code base
- make LazyBones build and run with lates TVB
- code cleanup
- switch to Java 11
- remove calls / references to deprecated code
- fix a bunch of code smells
- refactored a few methods to reduce complexity